--- a/Changelog.txt
+++ b/Changelog.txt
@@ -4,6 +4,9 @@ http://cyberduck.ch/
 
 Changelog. Last modified: $Date$
 
+4.0.3 [http://trac.cyberduck.ch/milestone/4.0.3]
+- [Feature] IPv6 support (Windows) (#5699)
+
 4.0.2 [http://trac.cyberduck.ch/milestone/4.0.2]
 - [Feature] SSL URL for files in Akamai CDN enabled containers (Cloud Files)
 - [Feature] Transcript (SFTP) (#2944)
