--- a/www/update/changelog.txt
+++ b/www/update/changelog.txt
@@ -1,3 +1,6 @@
+4.0.3 [http://trac.cyberduck.ch/milestone/4.0.3]
+- [Feature] IPv6 support (Windows) (#5699)
+
 4.0.2 [http://trac.cyberduck.ch/milestone/4.0.2]
 - [Feature] SSL URL for files in Akamai CDN enabled containers (Cloud Files)
 - [Feature] Transcript (SFTP) (#2944)
