Add Bulgarian localzation courtesy of Emil Iliev.

--- a/www/update/changelog.txt
+++ b/www/update/changelog.txt
@@ -1,4 +1,5 @@
 4.0.3 [http://trac.cyberduck.ch/milestone/4.0.3]
+- [Localize] Bulgarian Localization
 - [Feature] IPv6 support (Windows) (#5699)
 
 4.0.2 [http://trac.cyberduck.ch/milestone/4.0.2]
