--- a/Changelog.txt
+++ b/Changelog.txt
@@ -5,6 +5,7 @@ http://cyberduck.ch/
 Changelog. Last modified: $Date$
 
 4.0.3 [http://trac.cyberduck.ch/milestone/4.0.3]
+- [Localize] Bulgarian Localization
 - [Feature] IPv6 support (Windows) (#5699)
 
 4.0.2 [http://trac.cyberduck.ch/milestone/4.0.2]
