--- a/www/update/changelog.txt
+++ b/www/update/changelog.txt
@@ -1,4 +1,5 @@
 4.1.1 [http://trac.cyberduck.ch/milestone/4.1.1]
+- [Feature] Importer for WinSCP bookmarks
 - [Bugfix] Connection failure with email address as username (WebDAV) (#6066)
 - [Bugfix] Synchronisation comparison failures (#6074)
 - [Bugfix] Error listing folders (Openstack Swift) (#6089)
