--- a/sl.lproj/S3.strings
+++ b/sl.lproj/S3.strings
@@ -52,8 +52,10 @@
 "Google Group Email Address" = "E-poštni naslov Google Group računa";
 "Google Apps Domain" = "Google Apps domena";
 
-"http://acs.amazonaws.com/groups/global/AllUsers" ="http://acs.amazonaws.com/groups/global/AllUsers";
-"http://acs.amazonaws.com/groups/s3/LogDelivery" = "http://acs.amazonaws.com/groups/s3/LogDelivery";
+"http://acs.amazonaws.com/groups/global/AllUsers" ="Everyone";
+"http://acs.amazonaws.com/groups/s3/LogDelivery" = "Log Delivery";
+"AllUsers" ="Everyone";
+"AllAuthenticatedUsers" = "Google Account Holders";
 
 /* Signed URL Expiry */
 "Signed" = "Vpisan";
