--- a/Changelog.txt
+++ b/Changelog.txt
@@ -4,6 +4,13 @@ http://cyberduck.ch/
 
 Changelog. Last modified: $Date$
 
+4.1.3 [http://trac.cyberduck.ch/milestone/4.1.3]
+- [Bugfix] Freeze after file transfer is complete (#6183)
+- [Bugfix] Connection failure to Eucalyptus Cloud installation (S3) (#6206)
+- [Feature] Support streaming URLs (Cloudfiles)
+- [Feature] Option to set ACLs for Google Apps Domain (Google Storage)
+- [Feature] Option to set ACLs for Google Group Email Address (Google Storage)
+
 4.1.2 [http://trac.cyberduck.ch/milestone/4.1.2]
 - [Feature] Rename files (Cloudfiles)
 - [Feature] Duplicate files (Cloudfiles)
