--- a/www/update/changelog.txt
+++ b/www/update/changelog.txt
@@ -1,7 +1,7 @@
 4.1.3 [http://trac.cyberduck.ch/milestone/4.1.3]
 - [Bugfix] Freeze after file transfer is complete (#6183)
 - [Bugfix] Connection failure to Eucalyptus Cloud installation (S3) (#6206)
-- [Feature] Support streaming URLs (Cloudfiles)
+- [Feature] Copy streaming URLs (Cloudfiles)
 - [Feature] Option to set ACLs for Google Apps Domain (Google Storage)
 - [Feature] Option to set ACLs for Google Group Email Address (Google Storage)
 - [Feature] Allow setting non-metadata headers (Cloudfiles, Openstack Swift) (#6191, #6239)
