--- a/Changelog.txt
+++ b/Changelog.txt
@@ -4,6 +4,9 @@ http://cyberduck.ch/
 
 Changelog. Last modified: $Date$
 
+4.1.4 [http://trac.cyberduck.ch/milestone/4.1.4]
+- [Feature] Support server side encryption (S3)
+
 4.1.3 [http://trac.cyberduck.ch/milestone/4.1.3]
 - [Bugfix] Freeze after file transfer is complete (#6183)
 - [Bugfix] Connection failure to Eucalyptus Cloud installation (S3) (#6206)
