--- a/Changelog.txt
+++ b/Changelog.txt
@@ -7,6 +7,7 @@ Changelog. Last modified: $Date$
 4.1.4 [http://trac.cyberduck.ch/milestone/4.1.4]
 - [Feature] Support server side encryption (S3)
 - [Feature] Configure access logs for buckets (Google Cloud Storage)
+- [Feature] Interoperability with OpenSSH to read private key from keychain.
 - [Bugfix] Performance improvement preparing files for download
 
 4.1.3 [http://trac.cyberduck.ch/milestone/4.1.3]
