--- a/www/update/changelog.txt
+++ b/www/update/changelog.txt
@@ -3,6 +3,7 @@
 - [Feature] Configure access logs for buckets (Google Cloud Storage)
 - [Feature] Interoperability with OpenSSH to read private key from keychain.
 - [Bugfix] Performance improvement preparing files for download
+- [Bugfix] Deleting files (Google Docs)
 
 4.1.3 [http://trac.cyberduck.ch/milestone/4.1.3]
 - [Bugfix] Freeze after file transfer is complete (#6183)
