--- a/www/update/changelog.txt
+++ b/www/update/changelog.txt
@@ -2,8 +2,11 @@
 - [Feature] Support server side encryption (S3)
 - [Feature] Configure access logs for buckets (Google Cloud Storage)
 - [Feature] Interoperability with OpenSSH to read private key from keychain.
+- [Feature] Connect to multiple projects (Google Cloud Storage) (#5955)
+- [Feature] Support OAuth 2.0 Authentication (Google Cloud Storage) (#5955)
 - [Bugfix] Performance improvement preparing files for download
-- [Bugfix] Deleting files (Google Docs)
+- [Bugfix] ETag mismatch deleting files	(Google Docs) (#6204)
+- [Bugfix] Creating new file (WebDAV) (#6341)
 
 4.1.3 [http://trac.cyberduck.ch/milestone/4.1.3]
 - [Bugfix] Freeze after file transfer is complete (#6183)
