--- a/lv.lproj/S3.strings
+++ b/lv.lproj/S3.strings
@@ -15,6 +15,7 @@
 "EU" = "EU (Īrija)";
 "US" = "ASV standarts";
 "us-west-1" = "ASV-Rietumu (Ziemeļ Kalifornija)";
+"us-west-2" = "US West (Oregon)";
 "ap-southeast-1" = "Āzija un Klusais okeāns (Singapore)";
 "ap-northeast-1" = "Asia Pacific (Tokyo)";
 
