--- a/sl.lproj/S3.strings
+++ b/sl.lproj/S3.strings
@@ -15,6 +15,7 @@
 "EU" = "EU (Irska)";
 "US" = "ZDA standardno";
 "us-west-1" = "ZDA-zahod (severna Kalifornija)";
+"us-west-2" = "US West (Oregon)";
 "ap-southeast-1" = "Azija, Pacifik (Singapur)";
 "ap-northeast-1" = "Asia Pacific (Tokyo)";
 
