--- a/Changelog.txt
+++ b/Changelog.txt
@@ -5,6 +5,7 @@ http://cyberduck.ch/
 Changelog. Last modified: $Date$
 
 4.1.4 [http://trac.cyberduck.ch/milestone/4.1.4]
+- [Feature] Drag files between browser windows to copy files from server to server
 - [Feature] Support server side encryption (S3)
 - [Feature] Configure access logs for buckets (Google Cloud Storage)
 - [Feature] Interoperability with OpenSSH to read private key from keychain.
