--- a/www/update/changelog.txt
+++ b/www/update/changelog.txt
@@ -1,4 +1,5 @@
 4.1.4 [http://trac.cyberduck.ch/milestone/4.1.4]
+- [Feature] Drag files between browser windows to copy files from server to server
 - [Feature] Support server side encryption (S3)
 - [Feature] Configure access logs for buckets (Google Cloud Storage)
 - [Feature] Interoperability with OpenSSH to read private key from keychain.
