Former-commit-id: ed8ef70a904ffe3e0063f8ab17a6928b72eab0b0

--- a/www/update/changelog.txt
+++ b/www/update/changelog.txt
@@ -1,3 +1,6 @@
+4.2.1 [http://trac.cyberduck.ch/milestone/4.2.1]
+- [Bugfix] Edited files not uploaded (#6399)
+
 4.2 [http://trac.cyberduck.ch/milestone/4.2]
 - [Feature] Drag files between browser windows to copy files from server to server
 - [Feature] Support server side encryption (S3)
