Sao Paulo Region
Former-commit-id: c5a2cea4c657a7e3dc9c2e44033cd2816a098022

--- a/sl.lproj/S3.strings
+++ b/sl.lproj/S3.strings
@@ -18,6 +18,7 @@
 "us-west-2" = "US West (Oregon)";
 "ap-southeast-1" = "Azija, Pacifik (Singapur)";
 "ap-northeast-1" = "Asia Pacific (Tokyo)";
+"sa-east-1" = "South America (Sao Paulo)";
 
 /* Delivery methods including streaming protocols. */ 
 "Download (HTTP)" = "Prenos (HTTP) CDN";
