--- a/lv.lproj/S3.strings
+++ b/lv.lproj/S3.strings
@@ -18,6 +18,7 @@
 "us-west-2" = "US West (Oregon)";
 "ap-southeast-1" = "Āzija un Klusais okeāns (Singapore)";
 "ap-northeast-1" = "Asia Pacific (Tokyo)";
+"sa-east-1" = "South America (Sao Paulo)";
 
 /* Delivery methods including streaming protocols. */ 
 "Download (HTTP)" = "Lejuplāde (HTTP) CDN";
