--- a/www/update/changelog.txt
+++ b/www/update/changelog.txt
@@ -1,4 +1,5 @@
 4.2.2 [http://trac.cyberduck.ch/milestone/4.2.2]
+- [Localize] Arabic Localization
 - [Feature] Bucket location in South America (Sao Paulo) Region (S3)
 - [Feature] Multi-Object Delete (S3)
 
