--- a/Changelog.txt
+++ b/Changelog.txt
@@ -5,6 +5,7 @@ http://cyberduck.ch/
 Changelog. Last modified: $Date$
 
 4.2.2 [http://trac.cyberduck.ch/milestone/4.2.2]
+- [Localize] Arabic Localization
 - [Feature] Bucket location in South America (Sao Paulo) Region (S3)
 - [Feature] Multi-Object Delete (S3)
 
