Former-commit-id: aba52fad33febfbfed48c728fc927df435f0b3ba

--- a/www/update/changelog.txt
+++ b/www/update/changelog.txt
@@ -1,5 +1,6 @@
 4.2.2 [http://trac.cyberduck.ch/milestone/4.2.2]
 - [Localize] Arabic Localization
+- [Feature] One click setup for analytics with Qloudstat (S3, CloudFront, Cloudfiles, Google Storage)
 - [Feature] Bucket location in South America (Sao Paulo) Region (S3)
 - [Feature] Multi-Object Delete (S3)
 - [Feature] Interoperability with HP Cloud (Openstack)
