--- a/Changelog.txt
+++ b/Changelog.txt
@@ -6,6 +6,7 @@ Changelog. Last modified: $Date$
 
 4.2.2 [http://trac.cyberduck.ch/milestone/4.2.2]
 - [Localize] Arabic Localization
+- [Feature] One click setup for analytics with Qloudstat (S3, CloudFront, Cloudfiles, Google Storage)
 - [Feature] Bucket location in South America (São Paulo) Region (S3)
 - [Feature] Multi-Object Delete (S3)
 - [Feature] Interoperability with HP Cloud (Openstack)
