--- a/Changelog.txt
+++ b/Changelog.txt
@@ -6,13 +6,14 @@ Changelog. Last modified: $Date$
 
 4.2.2 [http://trac.cyberduck.ch/milestone/4.2.2]
 - [Localize] Arabic Localization
+- [Feature] Retina resolution support (10.8) (#6760)
+- [Feature] Notification center support (10.8) (#6792)
 - [Feature] One click setup for analytics with Qloudstat (S3, CloudFront, Cloudfiles, Google Storage)
 - [Feature] Bucket location in South America (São Paulo) Region (S3)
 - [Feature] Multi-Object Delete (S3)
 - [Feature] Interoperability with HP Cloud (Openstack)
 - [Feature] Interoperability with Lunacloud Storage (S3)
 - [Feature] Website Configuration (Google Storage)
-- [Feature] Retina resolution support (#6760)
 - [Bugfix] Copy folder from server to server (#6440)
 - [Bugfix] Duplicate folder (#6495)
 - [Bugfix] Interoperability with latest API (CloudFront)
