--- a/www/update/changelog.txt
+++ b/www/update/changelog.txt
@@ -14,6 +14,8 @@
 - [Bugfix] Crash in Rendezvous resolver (#6814)
 - [Bugfix] Java optional install required (App Store) (#6090)
 - [Bugfix] Changes in editor not uploaded when choosing save on close (#6590)
+- [Bugfix] Dropped support Azure Blob Storage connections (Azure)
+- [Bugfix] Dropped support Dropbox connections (Dropbox)
 
 4.2.1 [http://trac.cyberduck.ch/milestone/4.2.1]
 - [Bugfix] Edited files not uploaded (#6399)
