--- a/source/ch/cyberduck/ResourcesBundle.resx
+++ b/source/ch/cyberduck/ResourcesBundle.resx
@@ -160,14 +160,14 @@
   <data name="upload" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\..\..\img\upload.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="arrowLeftBlack16" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\..\..\img\arrowLeftBlack16.tiff;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="nav-backward" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\..\..\img\nav-backward.tiff;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="arrowRightBlack16" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\..\..\img\arrowRightBlack16.tiff;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="nav-forward" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\..\..\img\nav-forward.tiff;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="arrowUpBlack16" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\..\..\img\arrowUpBlack16.tiff;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="nav-up" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\..\..\img\nav-up.tiff;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="pencil" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\..\..\img\pencil.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -211,14 +211,11 @@
   <data name="plus" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\..\..\img\plus.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="arrowDown" type="System.Resources.ResXFileRef, System.Windows.Forms">
+  <data name="transfer-download" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\..\..\img\transfer-download.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="arrowUp" type="System.Resources.ResXFileRef, System.Windows.Forms">
+  <data name="transfer-upload" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\..\..\img\transfer-upload.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="arrowUpBlack" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\..\..\img\arrowUpBlack.tiff;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="clean" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\..\..\img\clean.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
